--- a/css/styles.css
+++ b/css/styles.css
@@ -13,28 +13,28 @@
   align-items: center;
 }
 
-#head{
+.head{
   font-weight: 700;
   font-style: normal;
-  font-size: 50px;
+  font-size: 3rem;
   position: relative;
   left: 50px;
 
 }
 
-#main-nav{
+.main-nav{
   position: relative;
   right: 20px;
   border: 1px solid #000000;
   background-color: black;
   color: white;
-  padding-left: 10px;
-  padding-right: 10px;
-  font-size: 20px;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  font-size: 1rem;
 
 }
 
-#main-nav:hover{
+.main-nav:hover{
   cursor: pointer;
 }
 
@@ -47,7 +47,7 @@
   justify-content: center;
   text-align: center;
   width: calc(100% / 3);
-  padding-bottom: 20px;
+  padding-bottom: 1rem;
 }
 
 
@@ -56,22 +56,45 @@
 }
 
 .sort-row{
-  padding-top: 20px;
+  padding-top: 1rem;
   position: relative;
-  right: 20px;
+  right: 1rem;
   display: flex;
   width: 100%;
   justify-content: flex-end;
 }
 
-#house{
-  font-size: 20px;
-  padding-right: 50px;;
-  padding-left: 10px;
+.house{
+  font-size: 1rem;
+  padding-right: 3rem;;
+  padding-left: 1rem;
 }
 
 #char-list{
   width: 100%;
   display: flex;
   flex-wrap: wrap;
+}
+
+@media screen and (max-width: 985px) {
+  .container {
+    max-width: 900px;
+  }
+
+  .head{
+    font-size: 1.5rem;
+    left: 1rem;
+  }
+
+  .main-nav{
+    font-size: 1rem;
+  }
+
+  .house{
+    font-size: 1rem;
+  }
+
+  .square{
+    width: 100%;
+  }
 }
