--- a/css/styles.css
+++ b/css/styles.css
@@ -109,12 +109,12 @@
   width: 20rem;
 }
 
-#heart {
+.heart {
   padding-top: 2rem;
   padding-left: 0.8rem;
 }
 
-#fav {
+.fav {
   font-size: 1rem;
   font-weight: 100;
 }
